Revising Chapter 07 text style

--- a/Capítulo 07 - Iteração.ipynb
+++ b/Capítulo 07 - Iteração.ipynb
@@ -213,9 +213,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Você até pode ler a instrução `while` como se fosse uma tradução do inglês. Significa “Enquanto `n` for maior que `0`, mostre o valor de `n` e então decremente `n`. Quando chegar a `0`, mostre a palavra Blastoff!”\n",
+    "Você até pode ler a instrução `while` como se fosse uma tradução do inglês. Significa “Enquanto `n` for maior que `0`, mostre o valor de `n` e então decremente `n`. Quando chegar a `0`, mostre a palavra _Blastoff_!”\n",
     "\n",
-    "Mais formalmente, aqui está o fluxo de execução para uma instrução while:\n",
+    "Mais formalmente, aqui está o fluxo de execução para uma instrução `while`:\n",
     "\n",
     "1. Determine se a condição é verdadeira ou falsa.\n",
     "\n",
@@ -223,13 +223,13 @@
     "\n",
     "3. Se a condição for verdadeira, execute o corpo e então volte ao passo 1.\n",
     "\n",
-    "Este tipo de fluxo chama-se loop (laço), porque o terceiro passo faz um loop de volta ao topo.\n",
+    "Este tipo de fluxo chama-se _loop_ (laço), porque o terceiro passo faz um _loop_ de volta ao topo.\n",
     "\n",
-    "O corpo do loop deve mudar o valor de uma ou mais variáveis para que, a certa altura, a condição fique falsa e o loop termine. Senão o loop vai se repetir para sempre, o que é chamado de loop infinito. Uma fonte infindável de divertimento para cientistas da computação é a observação das instruções no xampu, “Faça espuma, enxágue, repita”, que são parte de um **loop infinito**.\n",
+    "O corpo do _loop_ deve mudar o valor de uma ou mais variáveis para que, a certa altura, a condição fique falsa e o _loop_ termine. Senão o _loop_ vai se repetir para sempre, o que é chamado de **_loop_ infinito**. Uma fonte infindável de divertimento para cientistas da computação é a observação das instruções no xampu, “Faça espuma, enxágue, repita”, que são parte de um _loop_ infinito.\n",
     "\n",
-    "No caso de `countdown`, podemos provar que o loop termina: se `n` for zero ou negativo, o loop nunca é executado. Senão, `n` fica cada vez menor ao passar pelo loop, até eventualmente chegar a `0`.\n",
+    "No caso de `countdown`, podemos provar que o loop termina: se `n` for zero ou negativo, o _loop_ nunca é executado. Senão, `n` fica cada vez menor ao passar pelo loop, até eventualmente chegar a `0`.\n",
     "\n",
-    "Para alguns outros loops, não é tão fácil perceber isso. Por exemplo:"
+    "Para alguns outros _loops_, não é tão fácil perceber isso. Por exemplo:"
    ]
   },
   {
@@ -253,9 +253,9 @@
    "source": [
     "A condição deste loop é `n != 1`, então o loop continuará até que `n` seja `1`, o que torna a condição falsa.\n",
     "\n",
-    "Cada vez que passa pelo loop, o programa produz o valor de `n` e então verifica se é par ou ímpar. Se for par, `n` é dividido por `2`. Se for ímpar, o valor de `n` é substituído por `n * 3 + 1`. Por exemplo, se o argumento passado a `sequence` for `3`, os valores resultantes de `n` são `3`, `10`, `5`, `16`, `8`, `4`, `2`, `1`.\n",
+    "Cada vez que passa pelo _loop_, o programa produz o valor de `n` e então verifica se é par ou ímpar. Se for par, `n` é dividido por `2`. Se for ímpar, o valor de `n` é substituído por `n * 3 + 1`. Por exemplo, se o argumento passado a `sequence` for `3`, os valores resultantes de `n` são `3`, `10`, `5`, `16`, `8`, `4`, `2`, `1`.\n",
     "\n",
-    "Como `n` às vezes aumenta e às vezes diminui, não há nenhuma prova óbvia de que `n` chegará eventualmente a `1`, ou que o programa terminará. Para alguns valores de `n`, podemos provar o término. Por exemplo, se o valor inicial for uma potência de dois, `n` será par cada vez que passar pelo loop até que chegue a `1`. O exemplo anterior termina com uma sequência assim, que inicia com `16`.\n",
+    "Como `n` às vezes aumenta e às vezes diminui, não há nenhuma prova óbvia de que `n` chegará eventualmente a `1`, ou que o programa terminará. Para alguns valores de `n`, podemos provar o término. Por exemplo, se o valor inicial for uma potência de dois, `n` será par cada vez que passar pelo _loop_ até que chegue a `1`. O exemplo anterior termina com uma sequência assim, que inicia com `16`.\n",
     "\n",
     "A questão difícil é se podemos provar que este programa termina para todos os valores positivos de `n`. Por enquanto, ninguém foi capaz de comprovar ou refutar isso! (Veja http://en.wikipedia.org/wiki/Collatz\\_conjecture.)\n",
     "\n",
@@ -273,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Às vezes você não sabe que está na hora de terminar um loop até que já esteja na metade do corpo. Neste caso pode usar a instrução `break` para sair do loop.\n",
+    "Às vezes você não sabe que está na hora de terminar um _loop_ até que já esteja na metade do corpo. Neste caso pode usar a instrução `break` para sair do _loop_.\n",
     "\n",
     "Por exemplo, suponha que você quer receber uma entrada do usuário até que este digite `done`. Você pode escrever:"
    ]
@@ -296,9 +296,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A condição do loop é `True`, que sempre é verdade, então o loop roda até que chegue à instrução de interrupção.\n",
+    "A condição do _loop_ é `True`, que sempre é verdade, então o _loop_ roda até que chegue à instrução de interrupção.\n",
     "\n",
-    "Cada vez que passa pelo loop, o programa apresenta ao usuário um colchete angular. Se o usuário digitar `done`, a instrução `break` sai do loop. Senão, o programa ecoa o que quer que o usuário digite e volta ao topo do loop. Aqui está uma amostra de execução:"
+    "Cada vez que passa pelo _loop_, o programa apresenta ao usuário um colchete angular. Se o usuário digitar `done`, a instrução `break` sai do _loop_. Senão, o programa ecoa o que quer que o usuário digite e volta ao topo do _loop_. Aqui está uma amostra de execução:"
    ]
   },
   {
@@ -317,7 +317,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Esta forma de escrever loops `while` é comum porque podemos verificar a condição em qualquer lugar do loop (não somente no topo) e podemos exprimir a condição de parada afirmativamente (“pare quando isto acontecer”) em vez de negativamente (“continue a seguir até que isto aconteça”)."
+    "Esta forma de escrever _loops_ `while` é comum porque podemos verificar a condição em qualquer lugar do _loop_ (não somente no topo) e podemos exprimir a condição de parada afirmativamente (“pare quando isto acontecer”) em vez de negativamente (“continue a seguir até que isto aconteça”)."
    ]
   },
   {
@@ -464,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para a maior parte de valores de `a` funciona bem, mas pode ser perigoso testar a igualdade de um float. Os valores de ponto flutuante são aproximadamente corretos: a maioria dos números racionais, como 1/3, e números irracionais, como $\\sqrt {2}$, não podem ser representados exatamente com um float.\n",
+    "Para a maior parte de valores de `a` funciona bem, mas pode ser perigoso testar a igualdade de um `float`. Os valores de ponto flutuante são aproximadamente corretos: a maioria dos números racionais, como 1/3, e números irracionais, como $\\sqrt {2}$, não podem ser representados exatamente com um `float`.\n",
     "\n",
     "Em vez de verificar se `x` e `y` são exatamente iguais, é mais seguro usar a função integrada `abs` para calcular o valor absoluto ou magnitude da diferença entre eles:"
    ]
@@ -516,7 +516,7 @@
    "source": [
     "## 7.7 - Depuração\n",
     "\n",
-    "Ao começar a escrever programas maiores, pode ser que você passe mais tempo depurando. Mais código significa mais possibilidades fazer erros e mais lugares para esconder defeitos.\n",
+    "Ao começar a escrever programas maiores, pode ser que você passe mais tempo depurando. Mais código significa mais possibilidades de fazer erros e mais lugares para esconder defeitos.\n",
     "\n",
     "Uma forma de cortar o tempo de depuração é “depurar por bisseção”. Por exemplo, se há 100 linhas no seu programa e você as verifica uma a uma, seriam 100 passos a tomar.\n",
     "\n",
@@ -682,7 +682,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
