--- a/Capítulo 08 - Strings.ipynb
+++ b/Capítulo 08 - Strings.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "## 8.2 - len\n",
     "\n",
-    "len é uma função integrada que devolve o número de caracteres em uma string:"
+    "`len` é uma função integrada que devolve o número de caracteres em uma string:"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "\n",
     "## 8.3 - Travessia com loop for\n",
     "\n",
-    "Muitos cálculos implicam o processamento de um caractere por vez em uma string. Muitas vezes começam no início, selecionam um caractere por vez, fazem algo e continuam até o fim. Este modelo do processamento chama-se **travessia**. Um modo de escrever uma travessia é com o loop `while`:"
+    "Muitos cálculos implicam o processamento de um caractere por vez em uma string. Muitas vezes começam no início, selecionam um caractere por vez, fazem algo e continuam até o fim. Este modelo do processamento chama-se **travessia**. Um modo de escrever uma travessia é com o _loop_ `while`:"
    ]
   },
   {
@@ -203,11 +203,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este loop atravessa a string e exibe cada letra sozinha em uma linha. A condição do loop é `index < len (fruit)`, então quando index é igual ao comprimento da string, a condição é falsa e o corpo do loop não é mais executado. O último caractere acessado é aquele com o índice `len (fruit)-1`, que é o último caractere na string.\n",
+    "Este _loop_ atravessa a string e exibe cada letra sozinha em uma linha. A condição do _loop_ é `index < len (fruit)`, então quando `index` é igual ao comprimento da string, a condição é falsa e o corpo do _loop_ não é mais executado. O último caractere acessado é aquele com o índice `len (fruit)-1`, que é o último caractere na string.\n",
     "\n",
     "Como exercício, escreva uma função que receba uma string como argumento e exiba as letras de trás para a frente, uma por linha.\n",
     "\n",
-    "Outra forma de escrever uma travessia é com um loop for:"
+    "Outra forma de escrever uma travessia é com um _loop_ `for`:"
    ]
   },
   {
@@ -224,9 +224,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cada vez que o programa passar pelo loop, o caractere seguinte na string é atribuído à variável `letter`. O loop continua até que não sobre nenhum caractere.\n",
+    "Cada vez que o programa passar pelo _loop_, o caractere seguinte na string é atribuído à variável `letter`. O _loop_ continua até que não sobre nenhum caractere.\n",
     "\n",
-    "O próximo exemplo mostra como usar a concatenação (adição de strings) e um loop for para gerar uma série abecedária (isto é, em ordem alfabética). No livro de Robert McCloskey, Make Way for Ducklings (Abram caminho para os patinhos), os nomes dos patinhos são Jack, Kack, Lack, Mack, Nack, Ouack, Pack e Quack. Este loop produz estes nomes em ordem:"
+    "O próximo exemplo mostra como usar a concatenação (adição de strings) e um _loop_ `for` para gerar uma série abecedária (isto é, em ordem alfabética). No livro de Robert McCloskey, \"_Make Way for Ducklings_\" (Abram caminho para os patinhos), os nomes dos patinhos são Jack, Kack, Lack, Mack, Nack, Ouack, Pack e Quack. Este _loop_ produz estes nomes em ordem:"
    ]
   },
   {
@@ -238,8 +238,20 @@
     "prefixes = 'JKLMNOPQ'\n",
     "suffix = 'ack'\n",
     "for letter in prefixes:\n",
-    "    print(letter + suffix)\n",
-    "A saída é:\n",
+    "    print(letter + suffix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A saída é:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
     "Jack\n",
     "Kack\n",
     "Lack\n",
@@ -429,15 +441,15 @@
    "source": [
     "De certo modo, `find` é o inverso do operador `[]`. Em vez de tomar um índice e extrair o caractere correspondente, ele toma um caractere e encontra o índice onde aquele caractere aparece. Se o caractere não for encontrado, a função retorna -1.\n",
     "\n",
-    "Esse é o primeiro exemplo que vimos de uma instrução `return` dentro de um loop. Se `word[index] == letter`, a função sai do loop e retorna imediatamente.\n",
+    "Esse é o primeiro exemplo que vimos de uma instrução `return` dentro de um _loop_. Se `word[index] == letter`, a função sai do loop e retorna imediatamente.\n",
     "\n",
-    "Se o caractere não aparecer na string, o programa sai do loop normalmente e devolve -1.\n",
+    "Se o caractere não aparecer na string, o programa sai do _loop_ normalmente e devolve `-1`.\n",
     "\n",
     "Este modelo de cálculo – atravessar uma sequência e retornar quando encontramos o que estamos procurando – chama-se **busca**.\n",
     "\n",
     "Como exercício, altere `find` para que tenha um terceiro parâmetro: o índice em `word` onde deve começar a busca.\n",
     "\n",
-    "## 8.7 - Loop e contagem\n",
+    "## 8.7 - <i>Loop</i> e contagem\n",
     "\n",
     "O seguinte programa conta o número de vezes que a letra `a` aparece em uma string:"
    ]
@@ -609,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Com nomes de variáveis bem escolhidos, o Python às vezes pode ser lido como um texto em inglês. Você pode ler este loop, “para (cada) letra em (a primeira) palavra, se (a) letra (aparecer) em (a segunda) palavra, exiba (a) letra”.\n",
+    "Com nomes de variáveis bem escolhidos, o Python às vezes pode ser lido como um texto em inglês. Você pode ler este _loop_, “para (cada) letra em (a primeira) palavra, se (a) letra (aparecer) em (a segunda) palavra, exiba (a) letra”.\n",
     "\n",
     "Veja o que é apresentado ao se comparar maçãs e laranjas:"
    ]
@@ -681,7 +693,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Uma forma comum de lidar com este problema é converter strings em um formato padrão, como letras minúsculas, antes de executar a comparação. Lembre-se disso caso tenha que se defender de um [homem armado com um abacaxi](<a href=\"https://www.youtube.com/watch?v=U90dnUbZMmM\").\n",
+    "Uma forma comum de lidar com este problema é converter strings em um formato padrão, como letras minúsculas, antes de executar a comparação. Lembre-se disso caso tenha que se defender de um [homem armado com um abacaxi](https://www.youtube.com/watch?v=jfIkMXw_YM4).\n",
     "\n",
     "## 8.11 - Depuração\n",
     "\n",
@@ -711,9 +723,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A primeira instrução `if` verifica se as palavras têm o mesmo comprimento. Se não for o caso, podemos retornar `False` imediatamente. Do contrário, para o resto da função, podemos supor que as palavras tenham o mesmo comprimento. Este é um exemplo do modelo de guardião em “Verificação de tipos”, na página 101.\n",
+    "A primeira instrução `if` verifica se as palavras têm o mesmo comprimento. Se não for o caso, podemos retornar `False` imediatamente. Do contrário, para o resto da função, podemos supor que as palavras tenham o mesmo comprimento. Este é um exemplo do modelo guardião em “Verificação de tipos”, na página 101.\n",
     "\n",
-    "`i` e `j` são índices: `i` atravessa `word1` para a frente, enquanto `j` atravessa `word2` para trás. Se encontrarmos duas letras que não combinam, podemos retornar `False` imediatamente. Se terminarmos o loop inteiro e todas as letras corresponderem, retornamos `True`.\n",
+    "`i` e `j` são índices: `i` atravessa `word1` para a frente, enquanto `j` atravessa `word2` para trás. Se encontrarmos duas letras que não combinam, podemos retornar `False` imediatamente. Se terminarmos o _loop_ inteiro e todas as letras corresponderem, retornamos `True`.\n",
     "\n",
     "Se testarmos esta função com as palavras `“pots”` e `“stop”`, esperamos o valor de retorno `True`, mas recebemos um `IndexError`:"
    ]
@@ -787,7 +799,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na primeira vez que o programa passar pelo loop, o valor de `j` é `4`, que está fora do intervalo da string `'pots'`. O índice do último caractere é `3`, então o valor inicial de `j` deve ser `len(word2)-1`.\n",
+    "Na primeira vez que o programa passar pelo _loop_ , o valor de `j` é `4`, que está fora do intervalo da string `'pots'`. O índice do último caractere é `3`, então o valor inicial de `j` deve ser `len(word2)-1`.\n",
     "\n",
     "Se corrigir esse erro e executar o programa novamente, recebo:"
    ]
@@ -825,12 +837,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Desta vez, recebemos a resposta certa, mas parece que o loop só foi executado três vezes, o que é suspeito. Para ter uma ideia melhor do que está acontecendo, é útil desenhar um diagrama de estado. Durante a primeira iteração, o frame de `is_reverse` é mostrado na Figura 8.2.\n",
+    "Desta vez, recebemos a resposta certa, mas parece que o _loop_ só foi executado três vezes, o que é suspeito. Para ter uma ideia melhor do que está acontecendo, é útil desenhar um diagrama de estado. Durante a primeira iteração, o frame de `is_reverse` é mostrado na Figura 8.2.\n",
     "\n",
     "![Figura 8.2 – Diagrama de estado de is_reverse.](https://github.com/PenseAllen/PensePython2e/raw/master/fig/tnkp_0802.png)\n",
-    "<br>_8.2 – Diagrama de estado de is_reverse._\n",
+    "<br>_8.2 – Diagrama de estado de is&#95;reverse._\n",
     "\n",
-    "Tomei a liberdade de arrumar as variáveis no frame e acrescentei linhas pontilhadas para mostrar que os valores de `i` e `j` indicam caracteres em `word1` e `word2`.\n",
+    "Tomei a liberdade de arrumar as variáveis no _frame_ e acrescentei linhas pontilhadas para mostrar que os valores de `i` e `j` indicam caracteres em `word1` e `word2`.\n",
     "\n",
     "Começando com este diagrama, execute o programa em papel, alterando os valores de `i` e `j` durante cada iteração. Encontre e corrija o segundo erro desta função.\n",
     "\n",
@@ -883,7 +895,7 @@
     "\n",
     "### Exercício 8.2\n",
     "\n",
-    "Há um método de string chamado `count`, que é semelhante à função em “Loop e contagem”, na página 123. Leia a documentação deste método e escreva uma invocação que conte o número de letras `'a'` em 'banana'.\n",
+    "Há um método de string chamado `count`, que é semelhante à função em “_Loop_ e contagem”, na página 123. Leia a documentação deste método e escreva uma invocação que conte o número de letras `'a'` em 'banana'.\n",
     "\n",
     "### Exercício 8.3\n",
     "\n",
@@ -1001,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
