Revising chapters 08 and 09 text styles

--- a/Capítulo 08 - Strings.ipynb
+++ b/Capítulo 08 - Strings.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8.2 - len\n",
+    "## 8.2 - <code>len</code>\n",
     "\n",
     "`len` é uma função integrada que devolve o número de caracteres em uma string:"
    ]
@@ -181,7 +181,7 @@
    "source": [
     "Ou você pode usar índices negativos, que contam de trás para a frente a partir do fim da string. A expressão `fruit[-1]` apresenta a última letra, `fruit[-2]` apresenta a segunda letra de trás para a frente, e assim por diante.\n",
     "\n",
-    "## 8.3 - Travessia com loop for\n",
+    "## 8.3 - Travessia com <i>loop</i> <code>for</code>\n",
     "\n",
     "Muitos cálculos implicam o processamento de um caractere por vez em uma string. Muitas vezes começam no início, selecionam um caractere por vez, fazem algo e continuam até o fim. Este modelo do processamento chama-se **travessia**. Um modo de escrever uma travessia é com o _loop_ `while`:"
    ]
@@ -575,7 +575,7 @@
    "source": [
     "Esta busca falha porque `'b'` não aparece no intervalo do índice de 1 a 2, não incluindo 2. Fazer buscas até (mas não incluindo) o segundo índice torna `find` similar ao operador de fatiamento.\n",
     "\n",
-    "## 8.9 - Operador in\n",
+    "## 8.9 - Operador <code>in</code>\n",
     "\n",
     "A palavra `in` é um operador booleano que recebe duas strings e retorna `True` se a primeira aparecer como uma substring da segunda:"
    ]
