--- a/Capítulo 09 - Estudo de caso -  jogos de palavras.ipynb
+++ b/Capítulo 09 - Estudo de caso -  jogos de palavras.ipynb
@@ -25,7 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para os exercícios deste capítulo vamos usar uma lista de palavras em inglês. Há muitas listas de palavras disponíveis na internet, mas a mais conveniente ao nosso propósito é uma das listas de palavras disponibilizadas em domínio público por Grady Ward como parte do projeto lexical Moby (ver http://wikipedia.org/wiki/Moby\\_Project). É uma lista de 113.809 palavras cruzadas oficiais; isto é, as palavras que se consideram válidas em quebra-cabeças de palavras cruzadas e outros jogos de palavras. Na coleção Moby, o nome do arquivo é 113809of.fic; você pode baixar uma cópia, com um nome mais simples como `words.txt`, de http://thinkpython2.com/code/words.txt."
+    "Para os exercícios deste capítulo vamos usar uma lista de palavras em inglês. Há muitas listas de palavras disponíveis na internet, mas a mais conveniente ao nosso propósito é uma das listas de palavras disponibilizadas em domínio público por Grady Ward como parte do projeto \"_Lexical Moby_\" (ver http://wikipedia.org/wiki/Moby\\_Project). É uma lista de 113.809 palavras cruzadas oficiais; isto é, as palavras que se consideram válidas em quebra-cabeças de palavras cruzadas e outros jogos de palavras. Na coleção Moby, o nome do arquivo é 113809of.fic; você pode baixar uma cópia, com um nome mais simples como `words.txt`, de http://thinkpython2.com/code/words.txt."
    ]
   },
   {
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A primeira palavra nesta lista específica é `“aa”`, uma espécie de lava. A sequência `'\\r\\n'` representa dois caracteres que representam espaços em branco (whitespace), um retorno de carro e uma nova linha, que separa esta palavra da seguinte.\n",
+    "A primeira palavra nesta lista específica é `“aa”`, uma espécie de lava. A sequência `'\\r\\n'` representa dois caracteres que representam espaços em branco (_whitespace_), um retorno de carro e uma nova linha, que separa esta palavra da seguinte.\n",
     "\n",
     "O objeto de arquivo grava a posição em que está no arquivo, então se você chamar `readline` mais uma vez, receberá a seguinte palavra:"
    ]
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Você também pode usar um objeto de arquivo como parte de um loop `for`. Este programa lê `words.txt` e imprime cada palavra, uma por linha:"
+    "Você também pode usar um objeto de arquivo como parte de um _loop_ `for`. Este programa lê `words.txt` e imprime cada palavra, uma por linha:"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em 1939, Ernest Vincent Wright publicou uma novela de 50.000 palavras, chamada Gadsby, que não contém a letra `“e”`. Como o `“e”` é a letra mais comum em inglês, isso não é algo fácil de fazer.\n",
+    "Em 1939, Ernest Vincent Wright publicou uma novela de 50.000 palavras, chamada \"Gadsby\", que não contém a letra `“e”`. Como o `“e”` é a letra mais comum em inglês, isso não é algo fácil de fazer.\n",
     "\n",
     "Na verdade, é difícil até construir um único pensamento sem usar o símbolo mais comum do idioma. No início é lento, mas com prudência e horas de treino, vai ficando cada vez mais fácil."
    ]
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O loop `for` atravessa os caracteres em `word`. Se encontrarmos a letra “e”, podemos retornar `False` imediatamente; se não for o caso, temos que ir à letra seguinte. Se sairmos do loop normalmente, isso quer dizer que não encontramos um `“e”`, então retornamos `True`.\n",
+    "O _loop_ `for` atravessa os caracteres em `word`. Se encontrarmos a letra “e”, podemos retornar `False` imediatamente; se não for o caso, temos que ir à letra seguinte. Se sairmos do _loop_ normalmente, isso quer dizer que não encontramos um `“e”`, então retornamos `True`.\n",
     "\n",
     "Você pode escrever esta função de forma mais concisa usando o operador `in`, mas comecei com esta versão porque ela demonstra a lógica do modelo de busca.\n",
     "\n",
@@ -266,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos retornar `False` logo que encontrarmos uma letra proibida; se chegarmos ao fim do loop, retornamos `True`.\n",
+    "Podemos retornar `False` logo que encontrarmos uma letra proibida; se chegarmos ao fim do _loop_, retornamos `True`.\n",
     "\n",
     "`uses_only` é semelhante, exceto pelo sentido da condição, que se inverte:"
    ]
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Em vez de atravessar as letras em `word`, o loop atravessa as letras obrigatórias. Se alguma das letras obrigatórias não aparecer na palavra, podemos retornar `False`.\n",
+    "Em vez de atravessar as letras em `word`, o _loop_ atravessa as letras obrigatórias. Se alguma das letras obrigatórias não aparecer na palavra, podemos retornar `False`.\n",
     "\n",
     "Se você realmente estivesse pensando como um cientista da computação, teria reconhecido que `uses_all` foi um exemplo de um problema resolvido anteriormente e escreveria:"
    ]
@@ -336,11 +336,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9.4 - Loop com índices\n",
+    "## 9.4 - <i>Loop</i> com índices\n",
     "\n",
-    "Escrevi as funções na seção anterior com loops `for` porque eu só precisava dos caracteres nas strings; não precisava fazer nada com os índices.\n",
+    "Escrevi as funções na seção anterior com _loops_ `for` porque eu só precisava dos caracteres nas strings; não precisava fazer nada com os índices.\n",
     "\n",
-    "Para `is_abecedarian` temos que comparar letras adjacentes, o que é um pouco complicado para o loop `for`:"
+    "Para `is_abecedarian` temos que comparar letras adjacentes, o que é um pouco complicado para o _loop_ `for`:"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Outra opção é usar um loop `while`:"
+    "Outra opção é usar um _loop_ `while`:"
    ]
   },
   {
@@ -405,11 +405,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O loop começa com `i == 0` e termina quando `i == len(word)-1`. Cada vez que passa pelo loop, o programa compara o “i-ésimo” caractere (que você pode considerar o caractere atual) com o caractere de posição `i+1` (que pode ser considerado o caractere seguinte).\n",
+    "O _loop_ começa com `i == 0` e termina quando `i == len(word)-1`. Cada vez que passa pelo _loop_, o programa compara o “i-ésimo” caractere (que você pode considerar o caractere atual) com o caractere de posição `i+1` (que pode ser considerado o caractere seguinte).\n",
     "\n",
     "Se o próximo caractere for de uma posição anterior (alfabeticamente anterior) à atual, então descobrimos uma quebra na tendência alfabética, e retornamos `False`.\n",
     "\n",
-    "Se chegarmos ao fim do loop sem encontrar uma quebra, então a palavra passa no teste. Para convencer-se de que o loop termina corretamente, considere um exemplo como `'flossy'`. O comprimento da palavra é 6, então o loop é executado pela última vez quando i for igual a 4, que é o índice do segundo caractere de trás para frente. Na última iteração, o programa compara o penúltimo caractere com o último, que é o que queremos.\n",
+    "Se chegarmos ao fim do loop sem encontrar uma quebra, então a palavra passa no teste. Para convencer-se de que o _loop_ termina corretamente, considere um exemplo como `'flossy'`. O comprimento da palavra é 6, então o _loop_ é executado pela última vez quando i for igual a 4, que é o índice do segundo caractere de trás para frente. Na última iteração, o programa compara o penúltimo caractere com o último, que é o que queremos.\n",
     "\n",
     "Aqui está uma versão de `is_palindrome` (veja o Exercício 6.3) que usa dois índices: um começa no início e aumenta; o outro começa no final e diminui."
    ]
@@ -463,7 +463,7 @@
     "\n",
     "Testar programas é difícil. As funções neste capítulo são relativamente fáceis para testar porque é possível verificar os resultados à mão. Ainda assim, pode ser difícil ou até impossível escolher um grupo de palavras que teste todos os erros possíveis.\n",
     "\n",
-    "Tomando `has_no_e` como exemplo, há dois casos óbvios para verificar: as palavras que têm um `‘e’` devem retornar `False`, e as palavras que não têm devem retornar `True`. Não deverá ser um problema pensar em um exemplo de cada uma.\n",
+    "Tomando `has_no_e` como exemplo, há dois casos óbvios para verificar: as palavras que têm um `\"e\"` devem retornar `False`, e as palavras que não têm devem retornar `True`. Não deverá ser um problema pensar em um exemplo de cada uma.\n",
     "\n",
     "Dentro de cada caso, há alguns subcasos menos óbvios. Entre as palavras que têm um `“e”`, você deve testar palavras com um `“e”` no começo, no fim e em algum lugar no meio. Você deve testar palavras longas, palavras curtas e palavras muito curtas, como a string vazia. A string vazia é um exemplo de um **caso especial**, não óbvio, onde erros muitas vezes espreitam.\n",
     "\n",
@@ -503,7 +503,7 @@
    "source": [
     "### Exercício 9.7\n",
     "\n",
-    "Esta pergunta é baseada em um quebra-cabeça veiculado em um programa de rádio chamado Car Talk (http://www.cartalk.com/content/puzzlers):\n",
+    "Esta pergunta é baseada em um quebra-cabeça veiculado em um programa de rádio chamado \"_Car Talk_\" (http://www.cartalk.com/content/puzzlers):\n",
     "\n",
     "> Dê uma palavra com três letras duplas consecutivas. Vou dar exemplos de palavras que quase cumprem a condição, mas não chegam lá. Por exemplo, a palavra committee, c-o-m-m-i-t-t-e-e. Seria perfeita se não fosse aquele ‘i’ que se meteu ali no meio. Ou Mississippi: M-i-s-s-i-s-s-i-p-p-i. Se pudesse tirar aqueles ‘is’, daria certo. Mas há uma palavra que tem três pares consecutivos de letras e, que eu saiba, pode ser a única palavra que existe. É claro que provavelmente haja mais umas 500, mas só consigo pensar nessa. Qual é a palavra?\n",
     "\n",
@@ -518,7 +518,7 @@
    "source": [
     "### Exercício 9.8\n",
     "\n",
-    "Aqui está outro quebra-cabeça do programa Car Talk (http://www.cartalk.com/content/puzzlers):\n",
+    "Aqui está outro quebra-cabeça do programa \"_Car Talk_\" (http://www.cartalk.com/content/puzzlers):\n",
     "\n",
     "> “Estava dirigindo outro dia e percebi algo no hodômetro que chamou a minha atenção. Como a maior parte dos hodômetros, ele mostra seis dígitos, apenas em milhas inteiras. Por exemplo, se o meu carro tivesse 300.000 milhas, eu veria 3-0-0-0-0-0.\n",
     "\n",
@@ -539,7 +539,7 @@
    "source": [
     "### Exercício 9.9\n",
     "\n",
-    "Aqui está outro problema do Car Talk que você pode resolver com uma busca (http://www.cartalk.com/content/puzzlers):\n",
+    "Aqui está outro problema do \"_Car Talk_\" que você pode resolver com uma busca (http://www.cartalk.com/content/puzzlers):\n",
     "\n",
     "> “Há pouco tempo recebi uma visita da minha mãe e percebemos que os dois dígitos que compõem a minha idade, quando invertidos, representavam a idade dela. Por exemplo, se ela tem 73 anos, eu tenho 37 anos. Ficamos imaginando com que frequência isto aconteceu nos anos anteriores, mas acabamos mudando de assunto e não chegamos a uma resposta.\n",
     "\n",
@@ -565,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
