Revised Chapter 10 text style

--- a/Capítulo 10 - Listas.ipynb
+++ b/Capítulo 10 - Listas.ipynb
@@ -154,7 +154,7 @@
    "source": [
     "## 10.3 - Percorrendo uma lista\n",
     "\n",
-    "A forma mais comum de percorrer os elementos em uma lista é com um loop `for`. A sintaxe é a mesma que a das strings:"
+    "A forma mais comum de percorrer os elementos em uma lista é com um _loop_ `for`. A sintaxe é a mesma que a das strings:"
    ]
   },
   {
@@ -188,9 +188,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este loop percorre a lista e atualiza cada elemento. `len` retorna o número de elementos na lista. `range` retorna uma lista de índices de `0` a `n-1`, em que `n` é o comprimento da lista. Cada vez que passa pelo loop, `i` recebe o índice do próximo elemento. A instrução de atribuição no corpo usa `i` para ler o valor antigo do elemento e atribuir o novo valor.\n",
+    "Este _loop_ percorre a lista e atualiza cada elemento. `len` retorna o número de elementos na lista. `range` retorna uma lista de índices de `0` a `n-1`, em que `n` é o comprimento da lista. Cada vez que passa pelo _loop_, `i` recebe o índice do próximo elemento. A instrução de atribuição no corpo usa `i` para ler o valor antigo do elemento e atribuir o novo valor.\n",
     "\n",
-    "Um loop `for` que passe por uma lista vazia nunca executa o corpo:"
+    "Um _loop_ `for` que passe por uma lista vazia nunca executa o corpo:"
    ]
   },
   {
@@ -412,7 +412,7 @@
    "source": [
     "## 10.7 - Mapeamento, filtragem e redução\n",
     "\n",
-    "Para somar o total de todos os números em uma lista, você pode usar um loop como esse:"
+    "Para somar o total de todos os números em uma lista, você pode usar um _loop_ como esse:"
    ]
   },
   {
@@ -434,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`total` é inicializado com `0`. Cada vez que o programa passa pelo loop, `x` recebe um elemento da lista. O operador `+=` oferece uma forma curta de atualizar uma variável. Esta instrução de **atribuição aumentada**,"
+    "`total` é inicializado com `0`. Cada vez que o programa passa pelo _loop_, `x` recebe um elemento da lista. O operador `+=` oferece uma forma curta de atualizar uma variável. Esta instrução de **atribuição aumentada**,"
    ]
   },
   {
@@ -466,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No decorrer da execução do loop, `total` acumula a soma dos elementos; uma variável usada desta forma às vezes é chamada de **acumuladora**.\n",
+    "No decorrer da execução do _loop_, `total` acumula a soma dos elementos; uma variável usada desta forma às vezes é chamada de **acumuladora**.\n",
     "\n",
     "Somar todos elementos de uma lista é uma operação tão comum que o Python a oferece como uma função integrada, `sum`:"
    ]
@@ -508,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`res` é inicializado com uma lista vazia; cada vez que o programa passa pelo loop, acrescentamos o próximo elemento. Então `res` é outro tipo de acumulador.\n",
+    "`res` é inicializado com uma lista vazia; cada vez que o programa passa pelo _loop_, acrescentamos o próximo elemento. Então `res` é outro tipo de acumulador.\n",
     "\n",
     "Uma operação como `capitalize_all` às vezes é chamada de **mapeamento** porque ela “mapeia” uma função (nesse caso o método `capitalize`) sobre cada um dos elementos em uma sequência.\n",
     "\n",
@@ -535,7 +535,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`isupper` é um método de string que retorna True se a string contiver apenas letras maiúsculas.\n",
+    "`isupper` é um método de string que retorna `True` se a string contiver apenas letras maiúsculas.\n",
     "\n",
     "Uma operação como `only_upper` é chamada de **filtragem** porque filtra alguns dos elementos e desconsidera outros.\n",
     "\n",
@@ -910,7 +910,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O parâmetro `t` e a variável `letters` são alias para o mesmo objeto. O diagrama da pilha fica igual ao da Figura 10.5.\n",
+    "O parâmetro `t` e a variável `letters` são _alias_ para o mesmo objeto. O diagrama da pilha fica igual ao da Figura 10.5.\n",
     "\n",
     "![Figura 10.5 – Diagrama da pilha: `__main__` e `delete_head` compartilham referências à mesma lista.](https://github.com/PenseAllen/PensePython2e/raw/master/fig/tnkp_1005.png)\n",
     "<br>_Figura 10.5 – Diagrama da pilha:_ `__main__` _e_ `delete_head` _compartilham referências à mesma lista._"
@@ -1003,7 +1003,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O operador de fatia cria uma nova lista e a atribuição faz `t` se referir a ela, mas isso não afeta quem faz chamada."
+    "O operador de fatia cria uma nova lista e a atribuição faz `t` se referir a ela, mas isso não afeta quem faz a chamada."
    ]
   },
   {
@@ -1453,7 +1453,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
