--- a/Capítulo 11 - Dicionários.ipynb
+++ b/Capítulo 11 - Dicionários.ipynb
@@ -251,7 +251,7 @@
    "source": [
     "O nome da função é `histogram`, um termo estatístico para uma coleção de contadores (ou frequências).\n",
     "\n",
-    "A primeira linha da função cria um dicionário vazio. O loop `for` atravessa a string. Cada vez que passa pelo loop, se o caractere `c` não estiver no dicionário, criamos um item com a chave `c` e o valor inicial `1` (pois já vimos esta letra uma vez). Se o `c` já estiver no dicionário, incrementamos `d[c]`.\n",
+    "A primeira linha da função cria um dicionário vazio. O _loop_ `for` atravessa a string. Cada vez que passa pelo _loop_, se o caractere `c` não estiver no dicionário, criamos um item com a chave `c` e o valor inicial `1` (pois já vimos esta letra uma vez). Se o `c` já estiver no dicionário, incrementamos `d[c]`.\n",
     "\n",
     "Funciona assim:"
    ]
@@ -394,7 +394,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Essa função é mais um exemplo do padrão de busca, mas usa um recurso que ainda não tínhamos visto: `raise`. A **instrução raise** causa uma exceção; neste caso, causa um `LookupError`, que é uma exceção integrada, usada para indicar que uma operação de busca falhou.\n",
+    "Essa função é mais um exemplo do padrão de busca, mas usa um recurso que ainda não tínhamos visto: `raise`. A **instrução _raise_** causa uma exceção; neste caso, causa um `LookupError`, que é uma exceção integrada, usada para indicar que uma operação de busca falhou.\n",
     "\n",
     "Se chegarmos ao fim do loop significa que `v` não aparece no dicionário como um valor, portanto apresentaremos uma exceção.\n",
     "\n",
@@ -432,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O efeito causado por você ao apresentar uma exceção é igual ao causado pelo Python quando faz o mesmo: ele exibe um traceback e uma mensagem de erro.\n",
+    "O efeito causado por você ao apresentar uma exceção é igual ao causado pelo Python quando faz o mesmo: ele exibe um _traceback_ e uma mensagem de erro.\n",
     "\n",
     "A instrução `raise` pode receber uma mensagem de erro detalhada como argumento opcional. Por exemplo:"
    ]
@@ -480,7 +480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cada vez que o programa passar pelo loop, a `key` recebe uma chave de `d` e `val` recebe o valor correspondente. Se `val` não estiver em `inverse` significa que não foi vista antes, então criamos um item e o inicializamos com um **item avulso** (em inglês, *singleton*, uma lista que contém um único elemento). Se não for o caso é porque vimos esse valor antes, então acrescentamos a chave correspondente à lista.\n",
+    "Cada vez que o programa passar pelo _loop_, a `key` recebe uma chave de `d` e `val` recebe o valor correspondente. Se `val` não estiver em `inverse` significa que não foi vista antes, então criamos um item e o inicializamos com um **item avulso** (em inglês, *singleton*, uma lista que contém um único elemento). Se não for o caso é porque vimos esse valor antes, então acrescentamos a chave correspondente à lista.\n",
     "\n",
     "Aqui está um exemplo:"
    ]
@@ -789,7 +789,7 @@
     "\n",
     "**Formate a saída:**<p>\n",
     "> A formatação da saída para depuração pode facilitar a busca de erros. Vimos um exemplo em “Depuração”, na página 172. O módulo `pprint` apresenta uma função `pprint` que exibe tipos integrados em um formato mais legível para humanos (`pprint` é a abreviação de *“pretty print”* (bela exibição)).\n",
-    "Reforçando, o tempo que você passar construindo o scaffolding (o andaime) pode reduzir o tempo de depuração."
+    "Reforçando, o tempo que você passar construindo o _scaffolding_ (o andaime) pode reduzir o tempo de depuração."
    ]
   },
   {
@@ -839,7 +839,7 @@
     "**busca reversa** <br>\n",
     "&emsp;Operação de dicionário que recebe um valor e encontra uma ou várias chaves que o mapeiem.\n",
     "\n",
-    "**instrução raise** <br>\n",
+    "**instrução _raise_** <br>\n",
     "&emsp;Instrução que (deliberadamente) causa uma exceção.\n",
     "\n",
     "**item avulso (*singleton*)** <br>\n",
@@ -939,7 +939,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
