Revised Chapter 12 text style

--- a/Capítulo 12 - Tuplas.ipynb
+++ b/Capítulo 12 - Tuplas.ipynb
@@ -477,7 +477,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mas sum, não:"
+    "Mas `sum`, não:"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O resultado é um **objeto zip** que sabe como percorrer os pares. O uso mais comum de `zip` é em um loop `for`:"
+    "O resultado é um **objeto zip** que sabe como percorrer os pares. O uso mais comum de `zip` é em um _loop_ `for`:"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Você pode usar a atribuição de tuplas em um loop `for` para atravessar uma lista de tuplas:"
+    "Você pode usar a atribuição de tuplas em um _loop_ `for` para atravessar uma lista de tuplas:"
    ]
   },
   {
@@ -588,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cada vez que o programa passa pelo loop, o Python seleciona a próxima tupla na lista e atribui os elementos `letter` e `number`. A saída deste loop é:"
+    "Cada vez que o programa passa pelo _loop_, o Python seleciona a próxima tupla na lista e atribui os elementos `letter` e `number`. A saída deste _loop_ é:"
    ]
   },
   {
@@ -759,7 +759,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A expressão entre chaves é uma tupla. Podemos usar atribuição de tuplas para atravessar este dicionário:"
+    "A expressão entre colchetes é uma tupla. Podemos usar atribuição de tuplas para atravessar este dicionário:"
    ]
   },
   {
@@ -776,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Este loop atravessa as chaves em `directory`, que são tuplas. Ele atribui os elementos de cada tupla para `last` e `first`, e então exibe o nome e número de telefone correspondente.\n",
+    "Este _loop_ atravessa as chaves em `directory`, que são tuplas. Ele atribui os elementos de cada tupla para `last` e `first`, e então exibe o nome e número de telefone correspondente.\n",
     "\n",
     "Há duas formas de representar tuplas em um diagrama de estado. A versão mais detalhada mostra os índices e elementos como aparecem em uma lista. Por exemplo, a tupla ('Cleese', 'John') apareceria como na Figura 12.1.\n",
     "\n",
@@ -815,7 +815,7 @@
     "\n",
     "2. Se quiser usar uma sequência como uma chave de dicionário, é preciso usar um tipo imutável como uma tupla ou string.\n",
     "\n",
-    "3. Se estiver passando uma sequência como um argumento a uma função, usar tuplas reduz o potencial de comportamento inesperado devido a alias.\n",
+    "3. Se estiver passando uma sequência como um argumento a uma função, usar tuplas reduz o potencial de comportamento inesperado devido a `alias`.\n",
     "\n",
     "Como tuplas são imutáveis, elas não fornecem métodos como `sort` e `reverse`, que alteram listas existentes. Porém, o Python fornece a função integrada `sorted`, que recebe qualquer sequência e retorna uma nova lista com os mesmos elementos ordenados, e `reversed`, que recebe uma sequência e retorna um iterador que percorre a lista em ordem reversa."
    ]
@@ -973,7 +973,7 @@
     "\n",
     "2. Altere o programa anterior para que exiba a lista mais longa de anagramas primeiro, seguido pela segunda mais longa, e assim por diante.\n",
     "\n",
-    "3. No Scrabble, um “bingo” é quando você joga todas as sete peças na sua estante, junto com uma peça no tabuleiro, para formar uma palavra de oito letras. Que coleção de oito letras forma o maior número possível de bingos? Dica: há sete.\n",
+    "3. No _Scrabble_, um “bingo” é quando você joga todas as sete peças na sua estante, junto com uma peça no tabuleiro, para formar uma palavra de oito letras. Que coleção de oito letras forma o maior número possível de bingos? Dica: há sete.\n",
     "\n",
     "Solução: http://thinkpython2.com/code/anagram_sets.py."
    ]
@@ -1001,7 +1001,7 @@
     "\n",
     "Agora, as letras podem ser retiradas do fim ou do meio, mas você não pode reajustar nenhuma delas. Cada vez que remove uma letra, você acaba com outra palavra inglesa. Se fizer isto, eventualmente você acabará com uma letra e isso também será uma palavra inglesa; uma encontrada no dicionário. Quero saber qual é a palavra mais longa e quantas letras tem?\n",
     "\n",
-    "Vou dar um pequeno exemplo modesto: Sprite. Ok? Você começa com sprite, tira uma letra do interior da palavra, tira o r, e ficamos com a palavra spite, então tiramos o e do fim, ficamos com spit, tiramos o s, ficamos com pit, it e I.\n",
+    "Vou dar um pequeno exemplo modesto: _sprite_. Ok? Você começa com _sprite_, tira uma letra do interior da palavra, tira o r, e ficamos com a palavra _spite_, então tiramos o e do fim, ficamos com _spit_, tiramos o s, ficamos com _pit_, _it_ e _I_.\n",
     "\n",
     "Escreva um programa que encontre todas as palavras que podem ser reduzidas desta forma, e então encontre a mais longa.\n",
     "\n",
@@ -1035,7 +1035,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
